# noise-discrepancies

./: CMakeLists.txt
src/noise_discrepancies/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
src/regular_segmentation/: CMakeLists.txt  regular_segmentation.hpp
src/slic/: CMakeLists.txt  SLIC.cpp  SLIC.h
src/slic_segmentation/: CMakeLists.txt  slic_segmentation.cpp  slic_segmentation.hpp
